# faunus-rs

./: .gitignore  .gitmodules  Cargo.toml  GPU_LANGEVIN_ANALYSIS.md  LICENSE  README.md  WASM.md
anglescan/: Cargo.toml  README.md
anglescan/assets/: atoms.yml  calvados3.ipynb  calvados3.yaml  topology.yaml
anglescan/examples/: icosphere.rs
anglescan/src/: anglescan.rs  energy.rs  icotable.rs  lib.rs  main.rs  notebook.ipynb  plot.py  report.rs  structure.rs  table.rs
core/: Cargo.toml
core/assets/: Untitled.ipynb
core/doc/: SUMMARY.md
core/src/: cell.rs  change.rs  cite.rs  energy.rs  forcefield.rs  group.rs  lib.rs  molecule.rs  time.rs  topology.rs  transform.rs
core/src/analysis/: mod.rs
core/src/cell/: cuboid.rs  endless.rs  lumol.rs  mod.rs  sphere.rs
core/src/chemistry/: electrolyte.rs  mod.rs  reaction.rs
core/src/energy/: mod.rs
core/src/montecarlo/: mod.rs  translate.rs
core/src/platform/: mod.rs
core/src/topology/: atom.rs  bond.rs  chain.rs  chemfiles.rs  dihedral.rs  mod.rs  residue.rs  torsion.rs
coulomb/: Cargo.toml  README.md
coulomb/examples/: potential.rs
coulomb/src/: debye_length.rs  lib.rs  math.rs  medium.rs  permittivity.rs  salt.rs  spline.rs  units.rs
coulomb/src/pairwise/: coulomb.rs  energy.rs  ewald.rs  ewald_truncated.rs  field.rs  force.rs  mod.rs  plain.rs  poisson.rs  potential.rs  reactionfield.rs
coulomb/src/reciprocal/: mod.rs
double-layer-gui/: Cargo.toml  index.html
double-layer-gui/src/: main.rs
electrolyte/: Cargo.toml
electrolyte/src/: lib.rs  medium.rs  permittivity.rs  salt.rs
faunus/: .gitignore  Cargo.toml  DEEP_MODULE_REVIEW.md  GPU_PLAN.md  IMPLEMENT_SPLINED_NONBONDED_MATRIX.md  NONBONDED_ELECTROSTATICS.md  PHASE_SHIFT.md  REACTION_COORDINATE_PLAN.md  README.md  mkdocs.yml
faunus/.cargo/: config.toml
faunus/.claude/: CLAUDE.md
faunus/.github/workflows/: docs.yml
faunus/assets/: convert_topology.py  kimhummer.yaml
faunus/benches/: mc_sweep.rs
faunus/docs/: analysis.md  energy.md  index.md  moves.md  selection_language.md  topology.md  umbrella.md  wang_landau.md
faunus/examples/: plot_pmf.py
faunus/examples/calvados3/: analyse.ipynb  calvados3.yaml  input.yaml  plot_pmf.py  pmf.json  run-duello.sh
faunus/examples/colloid_polymer/: run_and_plot.py
faunus/examples/double_layer/: input.yaml
faunus/examples/grafted_phosphate/: RESUME  plot_orientation.py  plot_pmf.py  plot_scan.py  run_scan.sh
faunus/examples/kimhummer/: input.yaml
faunus/examples/langevin/: equilibrate.yaml  input.yaml  langevin.yaml  plot.ipynb  state.yaml
faunus/examples/npt_polymers/: input.yaml  polymer.xyz
faunus/examples/phosphate-titration/: input.yaml  phosphate.xyz  titration.py
faunus/examples/sticks/: duello-topology.yaml  input.yaml  notebook.ipynb  pmf.json  run-duello.sh  run-mc.sh  stick.xyz
faunus/examples/trp-cage/: plot_energy_comparison.py  plot_rdf.py
faunus/examples/twobody/: input.yaml  main.rs  twobody.ipynb  twobody.yaml  twobody_executed.ipynb
faunus/examples/twobody_6dtable/: REPORT.md
faunus/examples/twobody_rcmc/: plot_pmf.py
faunus/examples/wang_landau_2d/: input.yaml  plot.py
faunus/josh/: 2CDS.cif  2CDS.pqr  c++faunus  plot_pmf.py
faunus/scripts/: calvados3.sh  generate_kimhummer_asset.py  langevin.sh  openmm2faunus.py  regression_tests.sh  twobody.sh  update_fixtures.sh
faunus/scripts/openmm2faunus/: .gitignore  martini2faunus.py  pyproject.toml  to_yaml.py  topology.py
faunus/src/: aux.rs  auxiliary.rs  axes.rs  backend.rs  basic.rs  celllist.rs  change.rs  cli.rs  collective_variable.rs  context.rs  dimension.rs  electrolyte.rs  flat_histogram.rs  geometry.rs  group.rs  histogram.rs  lib.rs  particle.rs  propagate.rs  simulation.rs  state.rs  time.rs  transform.rs  umbrella.rs  wang_landau.rs
faunus/src/analysis/: collective_variable.rs  distance.rs  double_layer_pressure.rs  electric_potential_profile.rs  energy.rs  mean_along_coordinate.rs  mod.rs  multipole.rs  radial_distribution.rs  reweight.rs  rotational_diffusion.rs  scaled_widom_insertion.rs  shape.rs  structure_writer.rs  virtual_translate.rs  virtual_volume_move.rs  widom.rs
faunus/src/cell/: cuboid.rs  cylinder.rs  endless.rs  hexagonal_prism.rs  lumol.rs  mod.rs  pbc_params.rs  slit.rs  sphere.rs
faunus/src/chemistry/: electrolyte.rs  mod.rs  reaction.rs
faunus/src/collective_variable/: atom.rs  cell.rs  dynamic.rs  group.rs  mod.rs
faunus/src/energy/: bonded.rs  builder.rs  celloverlap.rs  constrain.rs  contact_tessellation.rs  custom_external.rs  custom_pair.rs  energyterm.rs  ewald.rs  excluded_coulomb.rs  exclusions.rs  expr_helpers.rs  external_pressure.rs  hamiltonian.rs  mod.rs  nonbonded.rs  nonbonded_kernel.rs  pairpot.rs  penalty.rs  polymer_depletion.rs  sasa.rs  slab_potential.rs  tabulated.rs  tabulated6d.rs
faunus/src/gpu/: buffers.rs  langevin.rs  mod.rs  spline.rs
faunus/src/montecarlo/: crankshaft.rs  gibbs.rs  mod.rs  pivot.rs  preferential.rs  propagator.rs  rotate.rs  speciation.rs  translate.rs  volume.rs
faunus/src/platform/: mod.rs
faunus/src/propagate/: builder.rs  langevin.rs  mod.rs  moveproposal.rs  moverunner.rs  tests.rs
faunus/src/selection/: constants.rs  evaluator.rs  expr.rs  glob.rs  mod.rs  parser.rs  token.rs
faunus/src/topology/: atom.rs  block.rs  bond.rs  chain.rs  chemfiles_interface.rs  dihedral.rs  mod.rs  molecule.rs  residue.rs  structure.rs  topology.rs  torsion.rs
faunus/tests/: gibbs_ensemble.rs  npt_polymers.rs  regression.rs  tests.rs
faunus/tests/common/: mod.rs
faunus/tests/files/: atom_input.yaml  bonded_interactions.yaml  cell_sphere.yaml  contact_tessellation.yaml  double_layer_pressure.yaml  minimal_atom.yaml  minimal_molecule.yaml  mol2.xyz  molecule.yaml  molecule_input.yaml  multiple_molecules.yaml  nonbonded_culling.yaml  nonbonded_custom.yaml  nonbonded_duplicate.yaml  nonbonded_duplicate_default.yaml  nonbonded_interactions.yaml  sasa_interactions.yaml  (+22 more)
interact/: Cargo.toml
interact/.cargo/: config.toml
interact/examples/: example1.rs
interact/src/: lib.rs  lj.rs  qpochhammer.rs  spline.rs
(+128 files in other folders)
