[package]
name = "anglescan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
approx = "0.5"
chemfiles = "0.10.41"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
itertools-num = "0.1"
nalgebra = "0.32"
rayon = "1.10"
