[package]
name = "anglescan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
approx = "0.5"
chemfiles = "0.10.41"
clap = { version = "4", features = ["derive"] }
itertools = "0.12"
itertools-num = "0.1"
nalgebra = "0.32"
rayon = "1.10"
faunus = { path = "../faunus" }
interatomic = {path = "../interatomic"}
coulomb = {path = "../coulomb"}
serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
pretty_env_logger = "0.5"
log = "0.4"
average = "0.15.0"
iter_num_tools = "0.7.1"
indicatif = {version = "*", features = ["rayon"]}
flate2 = "1.0"
textplots = "0.8.6"
rgb = "0.8.37"
nu-ansi-term = "0.50.0"
hexasphere = {version = "13.1", features = ["adjacency"]}
num-traits = "0.2.19"
rand = "0.8.5"
get-size = {version = "0.1.4", features = ["derive"]}
