[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
approx = "0.5"
assert_approx_eq = "1.0.1"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordslice = "0.3.0"
anyhow = "1.0.70"
itertools = "0.10.5"
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
derive-getters = "0.2.1"
interact = {path = "../interact"}
as-any = "0.3.0"
rand = "0.8.5"
num = "0.4.0"
