[package]
name = "faunus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
approx = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
itertools = "0.10"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
interact = {path = "../interact"}
as-any = "0.3"
rand = "0.8"
num = "0.4"
chemfiles = "0.10"
float-cmp = "0.9"
average = { version = "0.13", features = ["std", "serde1"] }
