[package]
name = "coulomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
approx = "0.5"
assert_approx_eq = "1.1"
dyn-clone = "1.0"
itertools = "0.10"
nalgebra = "0.32"
num = "0.4"
num-integer = "0.1.46"
physical_constants = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }

# See https://github.com/victe/rust-latex-doc-minimal-example
# for including math in the documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "coulomb/src/docs-header.html"]
