[package]
name = "coulomb"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Support library for electrolytes and electrostatic interactions"
license = "Apache-2.0"
repository = "https://github.com/mlund/faunus-rs"
authors = ["Mikael Lund"]
readme = "README.md"
categories = ["science"]
keywords = ["electrolytes", "electrostatics", "molecular simulation", "multipoles", "chemistry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dyn-clone = "1.0"
itertools = "0.10"
nalgebra = "0.32"
num = "0.4"
num-integer = "0.1.46"
physical_constants = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"

# See https://github.com/victe/rust-latex-doc-minimal-example
# for including math in the documentation:
# export RUSTDOCFLAGS="--html-in-header coulomb/src/docs-header.html"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "coulomb/src/docs-header.html"]
