[package]
name = "double-layer-gui"
version = "0.1.0"
edition = "2021"
description = "Native egui app for the Guldbrand electric double-layer simulation (faunus)"

[dependencies]
faunus = { path = "../faunus", default-features = false }
eframe = "0.29"
egui_plot = "0.29"
rand = "0.8"
anyhow = "1.0"
serde_yml = "0.0.12"

# Browser (WASM) target: getrandom needs the `js` backend to compile, and the eframe
# web entry point needs the canvas/spawn_local bindings. (web-time lives in faunus.)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
