[package]
name = "electrolyte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5"

[features]
default = []

[dependencies]
anyhow = "1.0"
num-integer = "0.1"
physical_constants = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }
