[package]
name = "faunus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "faunus"
path = "src/bin/faunus.rs"
required-features = ["cli"]

[lib]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
anyhow = "1.0"
itertools = "0.10"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
interatomic = { git = "https://github.com/mlund/interatomic.git", features=["serde"] }
rand = "0.8"
num = "0.4"
chemfiles = { version = "0.10.41", optional = true }
average = { version = "0.13", features = ["std", "serde1"] }
regex = "1.8.4"
coulomb = { version = "0.3", features = ["serde"] }
serde_yaml = "0.9"
validator = { version = "0.20", features = ["derive"] }
derive-getters = "0.3.0"
unordered-pair = { version = "0.2.4", features = ["serde"] }
serde_with = "3.8.1"
dyn-clone = "1.0.17"
ndarray = { version = "0.15.6", features = ["serde"] }
derive_builder = "0.20.0"
voronota-ltr = "0.1"
flate2 = "1.0.35"
derive_more = {version = "1.0.0", features = ["debug"]}
molly = "0.5"
physical_constants = "0.5.0"

# CLI-only dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
pretty_env_logger = { version = "0.5", optional = true }
indicatif = { version = "*", optional = true }

[dev-dependencies]
approx = "0.5"
float-cmp = "0.9"

[features]
default = ["cli"]
chemfiles = ["dep:chemfiles"]
cli = ["dep:clap", "dep:pretty_env_logger", "dep:indicatif"]

