[package]
name = "faunus"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "faunus"
path = "src/bin/faunus.rs"
required-features = ["cli"]

[lib]

[dependencies]
anyhow = "1.0"
average = { version = "0.13", default-features = false, features = ["std", "serde1"] }
derive-getters = "0.3.0"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", default-features = false, features = ["debug"] }
dyn-clone = "1.0.17"
exmex = { version = "0.20", features = ["value"] }
flate2 = "1.0.35"
icotable = { git = "https://github.com/mlund/icotable.git" }
interatomic = { git = "https://github.com/mlund/interatomic.git", features = ["serde", "custom", "gpu"] }
itertools = "0.10"
log = "0.4"
minijinja = { version = "2.18", default-features = false, features = ["builtins", "loop_controls", "serde"] }
molly = "0.5"
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
ndarray = { version = "0.15.6", features = ["serde"] }
paste = "1.0"
physical_constants = "0.5.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "3.8.1"
serde_yml = "0.0.12"
typetag = "0.2"
unordered-pair = { version = "0.2.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
voronota-ltr = { version = "0.3", default-features = false }

# CLI-only dependencies
bytemuck = { version = "1", features = ["derive"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
cubecl = { version = "0.9", features = ["wgpu", "cpu"], optional = true }
indicatif = { version = "*", optional = true }
pretty_env_logger = { version = "0.5", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
float-cmp = "0.9"
tempfile = "3"

[[bench]]
name = "mc_sweep"
harness = false

[features]
default = ["cli"]
cli = ["dep:clap", "dep:pretty_env_logger", "dep:indicatif"]
gpu = ["dep:cubecl", "dep:bytemuck"]

#lto = "thin"


