[package]
name = "interact"
version = "0.1.0"
edition = "2021"
description = "Library for intermolecular interaction potentials"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
assert_approx_eq = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
itertools = "0.10"
typetag = "0.2"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
approx = "0.5"
num = "0.4"

# See https://github.com/victe/rust-latex-doc-minimal-example
# for including math in the documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "interact/src/docs-header.html"]
